[package]
name = "cli_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.10.1"
rand_core = { version = "0.6" , features = ["getrandom"]}
serde = { version = "1.0.228", features = ["derive"] }
spake2 = "0.4.0"
thiserror = "2.0.18"
