[package]
name = "warp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5"
chacha20poly1305 = "0.10"
postcard = "1.1.3"
rand = "0.10.1"
rand_core = { version = "0.6" , features = ["getrandom"]}
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
